<?xml version="1.0"?>
<package format="2">
  <name>aliengo_bridge</name>
  <version>1.0.0</version>
  <description>The aliengo_bridge package</description>
  <maintainer email="schleich@ais.uni-bonn.de">schleich</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>config_server</depend>
  <depend>unitree_legged_msgs</depend>
  
  <exec_depend>joy</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
